# somiks_image_processor

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  cli_usage.md  cli_usage_examples.txt  conanfile.txt  generate_release.ps1  generate_release.sh
.github/workflows/: all_build.yml  config_validation.yml
src/algorithms/: blur.cpp  blur.hpp  change_type.cpp  change_type.hpp  common.hpp  common_conversions.hpp  common_macro.hpp  fft.cpp  fft.hpp  resize.cpp  resize.hpp  split_channels.cpp  split_channels.hpp  to_gray8.cpp  to_gray8.hpp  unary_math.cpp  unary_math.hpp
src/algorithms/configs/: blur.json  change_type.json  fft.json  resize.json  to_gray8.json  unary_math.json
src/application/: api.cpp  api.hpp  cli.cpp  config_manager.cpp  config_manager.hpp  extension_matcher.cpp  extension_matcher.hpp  image.hpp  main.cpp  meta_types.hpp  nd_image.hpp  options_manager.cpp  options_manager.hpp  options_type.hpp  util_types.hpp  utils.hpp
src/application/managers/: _algo_format_base.cpp  _algo_format_base.hpp  algorithm_manager.cpp  algorithm_manager.hpp  config_manager.cpp  config_manager.hpp  extension_manager.cpp  extension_manager.hpp  format_manager.cpp  format_manager.hpp  license_manager.cpp  license_manager.hpp  options_manager.cpp  options_manager.hpp
src/configs/codecs/: README.md  check_validity.py
src/formats/: common.hpp  common_macro.hpp  jpeg.cpp  jpeg.hpp  png.cpp  png.hpp  testing_sample.cpp  testing_sample.hpp
src/formats/configs/: README.md  jpeg.json  png.json  sample.json  testing_sample.json
src/licenses/: libjpeg-turbo.lic  zlib.lic
src/utils/: README.md  _check_config.py  check_algo_config.py  check_format_config.py  inline_configs.py
tests/: common.hpp  config_manager.cpp  extension_manager.cpp  extension_matcher.cpp  image.cpp  meta_types.cpp  nd_image.cpp  options_manager.cpp
tests/end_to_end/: algo_test_config.json  generate_algo_gt.py  test_algo.py  util.py
